--- a/SignIn.html
+++ b/SignIn.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Registration Form</title>
+<title>Sign In </title>
 <style>
 body {
   font-family: Arial, Times New Roman, sans-serif;
@@ -36,7 +36,7 @@ hr {
   margin-bottom: 25px;
 }
 
-.registerbtn {
+.signinbtn {
   background-color: #04AA6D;
   color: white;
   padding: 16px 20px;
@@ -47,7 +47,7 @@ hr {
   opacity: 0.9;
 }
 
-.registerbtn:hover {
+.signintn:hover {
   opacity: 1;
 }
 
@@ -55,7 +55,7 @@ a {
   color: dodgerblue;
 }
 
-.signin {
+.register {
   background-color: #f1f1f1;
   text-align: center;
 }
@@ -65,12 +65,9 @@ a {
 
 <form id="myform" onsubmit="return register()">
   <div class="container">
-    <h1>Register</h1>
-    <p>Please fill in this form to create an account.</p>
+    <h1>Sign In</h1>
+    <p>Please Sign In to your Account</p>
     <hr>
-
-    <label for="email"><b>Email</b></label>
-    <input type="text" placeholder="Enter Email" name="email" id="email" required>
 
     <label for="uname"><b>Username</b></label>
     <input type="text" placeholder="Enter Username" name="uname" id="uname" required>
@@ -78,22 +75,18 @@ a {
     <label for="psw"><b>Password</b></label>
     <input type="password" placeholder="Enter Password" name="psw" id="psw" required>
 
-    <hr>
-    <p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>
-
-    <button type="submit" class="registerbtn">Register</button>
+    <button type="submit" class="signinbtn">Sign In</button>
   </div>
   
-  <div class="container signin">
-    <p>Already have an account? <a href="SignIn.html">Sign in</a>.</p>
+  <div class="container register">
+    <p>Don't have an account? <a href="Register.html">Register Now</a>.</p>
   </div>
 </form>
 <script>
 const register = () =>{
 	var username = document.getElementById('uname').value;
-	alert(`${username}, You have been registered sucessfully!`);
+	alert(`${username}, You have been signed In sucessfully!`);
   document.getElementById("myform").reset();
-  document.location.href = "Sign In.html";
 	return false;
 }
 </script>
